--- a/src/tyml_parser/Cargo.toml
+++ b/src/tyml_parser/Cargo.toml
@@ -5,3 +5,5 @@ edition = "2024"
 
 [dependencies]
 regex = "1.11.1"
+bumpalo = { version = "3.17.0", features = ["allocator-api2"] }
+allocator-api2 = "0.2.21"
