--- a/src/tyml_parser/Cargo.toml
+++ b/src/tyml_parser/Cargo.toml
@@ -7,3 +7,4 @@ edition = "2024"
 regex = "1.11.1"
 bumpalo = { version = "3.17.0", features = ["allocator-api2"] }
 allocator-api2 = "0.2.21"
+extension-fn = "1.2.0"
