--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,3 @@
 [workspace]
 resolver = "2"
-members = ["src/tyml", "src/tyml_grammar", "src/tyml_parser"]
+members = ["src/tyml", "src/tyml_grammar", "src/tyml_parser", "src/tyml_type"]
