--- a/src/tyml_type/Cargo.toml
+++ b/src/tyml_type/Cargo.toml
@@ -4,3 +4,6 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+hashbrown = "0.15.2"
+bumpalo = { version = "3.17.0", features = ["allocator-api2"] }
+allocator-api2 = "0.2.21"
