--- a/src/tyml/Cargo.toml
+++ b/src/tyml/Cargo.toml
@@ -5,3 +5,7 @@ edition = "2021"
 
 [dependencies]
 tyml_parser = { path = "../tyml_parser/" }
+tyml_type = { path = "../tyml_type/" }
+bumpalo = { version = "3.17.0", features = ["allocator-api2"] }
+allocator-api2 = "0.2.21"
+either = "1.13.0"
