--- a/src/tyml_validate/Cargo.toml
+++ b/src/tyml_validate/Cargo.toml
@@ -9,3 +9,4 @@ tyml_type = { path = "../tyml_type/" }
 hashbrown = "0.15.2"
 bumpalo = { version = "3.17.0", features = ["allocator-api2"] }
 allocator-api2 = "0.2.21"
+auto_enums = "0.8.7"
