impl DiagnosticBuilder for TymlValueValidateError

--- a/src/tyml/Cargo.toml
+++ b/src/tyml/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+tyml_diagnostic = { path = "../tyml_diagnostic/" }
 tyml_grammar = { path = "../tyml_grammar/" }
 tyml_parser = { path = "../tyml_parser/" }
 tyml_type = { path = "../tyml_type/" }
@@ -11,3 +12,4 @@ tyml_validate = { path = "../tyml_validate/" }
 bumpalo = { version = "3.17.0", features = ["allocator-api2"] }
 allocator-api2 = "0.2.21"
 either = "1.13.0"
+hashbrown = "0.15.2"
