--- a/src/tyml_diagnostic/message/ja_JP.toml
+++ b/src/tyml_diagnostic/message/ja_JP.toml
@@ -69,11 +69,26 @@ label_1 = "値はこの型'%color:yellow{%0}'の属性と一致しません"
 [validate_error]
 name = "検証エラー"
 [validate_error.0001]
-message = "構造体以外の値が指定されています"
+message = "構造体以外の値が記述されています"
 label_0 = "'%color:yellow{%0}'には構造体を指定する必要があります"
 label_1 = "構造体として定義されているため、値や配列を指定できません"
 [validate_error.0002]
 message = "必要な値が見つかりません"
 label_0 = "ここを探しましたが見つかりませんでした"
-label_1 = "ここで'%color:yellow{%0}'が定義されていますが、値は見つかりませんでした"
+label_1 = "ここで'%color:yellow{%0}'が定義されていますが、値は記述されていません"
 note = "必要ない場合は型に'%color:cyan{?}'を付けることで、Optional型として扱うことができます"
+[validate_error.0003]
+message = "要素'%color:red{%0}'が重複しています"
+label_0 = "この値は重複しています"
+label_1 = "ここで既に記述されています"
+[validate_error.0004]
+message = "不明な要素'%color:red{%0}'が記述されています"
+label_0 = "この要素は定義されていません"
+[validate_error.0005]
+message = "値とその型'%color:yellow{%0}'が一致しません"
+label_0 = "この値は定義されている型と一致しません"
+label_1 = "値の型'%color:yellow{%0}'はここで定義されています"
+[validate_error.0006]
+message = "配列型'%color:yellow{%0}'ではない値が記述されています"
+label_0 = "ここで記述されている値の型が定義されているものと一致しません"
+label_1 = "値は配列型'%color:yellow{%0}'として定義されています"
