fix error message

--- a/src/tyml_diagnostic/message/ja_JP.toml
+++ b/src/tyml_diagnostic/message/ja_JP.toml
@@ -85,10 +85,10 @@ label_1 = "ここで既に記述されています"
 message = "不明な要素'%color:red{%0}'が記述されています"
 label_0 = "この要素は定義されていません"
 [validate_error.0005]
-message = "値とその型'%color:yellow{%0}'が一致しません"
+message = "要素'%color:yellow{%0}'の値とその型'%color:yellow{%1}'が一致しません"
 label_0 = "この値は定義されている型と一致しません"
-label_1 = "値の型'%color:yellow{%0}'はここで定義されています"
+label_1 = "要素'%color:yellow{%0}'は型'%color:yellow{%1}'として定義されています"
 [validate_error.0006]
-message = "配列型'%color:yellow{%0}'ではない値が記述されています"
+message = "要素'%color:yellow{%0}'に配列型'%color:yellow{%1}'ではない値が記述されています"
 label_0 = "ここで記述されている値の型が定義されているものと一致しません"
-label_1 = "値は配列型'%color:yellow{%0}'として定義されています"
+label_1 = "要素'%color:yellow{%0}'は配列型'%color:yellow{%1}'として定義されています"
