--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ resolver = "2"
 members = [
     "src/tyml",
     "src/tyml_diagnostic",
+    "src/tyml_generator",
     "src/tyml_grammar",
     "src/tyml_parser",
     "src/tyml_source",
