--- a/src/tyml_generator/Cargo.toml
+++ b/src/tyml_generator/Cargo.toml
@@ -10,3 +10,4 @@ either = "1.13.0"
 tyml_validate = { path = "../tyml_validate/" }
 allocator-api2 = "0.2.21"
 bumpalo = { version = "3.17.0", features = ["allocator-api2"] }
+auto_enums = "0.8.7"
