--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ members = [
     "src/tyml_diagnostic",
     "src/tyml_generator",
     "src/tyml_grammar",
+    "src/tyml_lsp",
     "src/tyml_parser",
     "src/tyml_source",
     "src/tyml_type",
