--- a/src/tyml_lsp/Cargo.toml
+++ b/src/tyml_lsp/Cargo.toml
@@ -7,3 +7,4 @@ edition = "2024"
 tyml = { path = "../tyml/" }
 tower-lsp = "0.20.0"
 tokio = { version = "1.44.2", features = ["full"] }
+regex = "1.11.1"
