--- a/src/tyml_generator/Cargo.toml
+++ b/src/tyml_generator/Cargo.toml
@@ -15,3 +15,4 @@ auto_enums = "0.8.7"
 derivative = "2.2.0"
 serde = { version = "1.0", features = ["derive"] }
 toml  = { version = "0.8", features = ["display"] }
+shellexpand = "3.1.1"
