--- a/src/tyml_diagnostic/message/ja_JP.toml
+++ b/src/tyml_diagnostic/message/ja_JP.toml
@@ -126,5 +126,17 @@ label_0 = "等号が必要です"
 label_1 = "キーと値の間に等号'%color:cyan{=}'を記述してみてください"
 
 [lsp.message]
-tyml_var_lookup_error = "指定された環境変数'%0'を解決できません"
+header_var_lookup_error = "指定された環境変数'%0'を解決できません"
 tyml_file_error = "TYMLファイル'%0'を読み込めませんでした"
+style_not_found = "言語定義'%0'が見つかりませんでした"
+
+[binary.message]
+no_file_specified = "ファイルが指定されていません"
+failed_to_read_file = "ファイルの読み込みに失敗しました"
+no_header_found = "ヘッダが見つかりませんでした"
+header_var_lookup_error = "ヘッダで指定された環境変数'%0'を解決できません"
+header_no_style_found = "ヘッダで指定された言語定義'%0'が見つかりません"
+header_no_tyml_found = "ヘッダで指定されたTYMLファイル'%0'が見つかりません"
+header_tyml_is_not_file = "ヘッダで指定された'%0'はファイルではありません"
+failed_to_read_tyml = "TYMLファイル'%0'の読み込みに失敗しました"
+has_error = "ファイル'%0'にはエラーが含まれています"
