--- a/src/tyml_generator/ini.toml
+++ b/src/tyml_generator/ini.toml
@@ -1,6 +1,3 @@
-[Section]
-comments = ["Hash"]
-
 [Section.section]
 kind = "Bracket"
 
@@ -42,3 +39,13 @@ trim_space = true
 [Section.key_value.value.any_string.Custom.option.escape]
 allow_escape = true
 unicode = "Normal"
+
+[[Section.comments]]
+
+[Section.comments.Line]
+start = ";"
+
+[[Section.comments]]
+
+[Section.comments.Line]
+start = "#"
