--- a/src/tyml_lsp/Cargo.toml
+++ b/src/tyml_lsp/Cargo.toml
@@ -13,3 +13,4 @@ tower-lsp = "0.20.0"
 tokio = { version = "1.44.2", features = ["full"] }
 regex = "1.11.1"
 extension-fn = "1.2.0"
+either = "1.13.0"
