impl inline section

--- a/src/tyml_generator/Cargo.toml
+++ b/src/tyml_generator/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2024"
 regex = "1.11.1"
 extension-fn = "1.2.0"
 either = "1.13.0"
+tyml_type = { path = "../tyml_type/" }
 tyml_validate = { path = "../tyml_validate/" }
 tyml_source = { path = "../tyml_source/" }
 allocator-api2 = "0.2.21"
@@ -14,5 +15,5 @@ bumpalo = { version = "3.17.0", features = ["allocator-api2"] }
 auto_enums = "0.8.7"
 derivative = "2.2.0"
 serde = { version = "1.0", features = ["derive"] }
-toml  = { version = "0.8", features = ["display"] }
+toml = { version = "0.8", features = ["display"] }
 shellexpand = "3.1.1"
