--- a/src/tyml/Cargo.toml
+++ b/src/tyml/Cargo.toml
@@ -28,3 +28,4 @@ reqwest = { version = "0.12", default-features = false, features = [
 fs2 = "0.4"
 sha2 = "0.10"
 dirs = "5"
+tokio = { version = "1.44.2", features = ["full"] }
