--- a/src/tyml_diagnostic/message/en_US.toml
+++ b/src/tyml_diagnostic/message/en_US.toml
@@ -1,5 +1,5 @@
 [parse_error]
-name = "%color:red{[SE%0] TYML syntax error}"
+name = "%color:red{[SE%0] TYML Syntax Error}"
 [parse_error.0001]
 message = "The element definition format is invalid"
 label_0 = "Unknown token"
@@ -54,7 +54,7 @@ message = "Bracket '%color:yellow{[}' is not closed"
 label_0 = "It must be closed with '%color:cyan{]}'"
 
 [type_error]
-name = "%color:red{[TE%0] Type error}"
+name = "%color:red{[TE%0] Type Error}"
 [type_error.0001]
 message = "Unknown type specified"
 label_0 = "Type named '%color:red{%0}' cannot be found"
@@ -68,7 +68,7 @@ label_0 = "This value does not match the type attributes"
 label_1 = "The value does not match the attributes of type '%color:yellow{%0}'"
 
 [validate_error]
-name = "%color:red{[VE%0] Validation error}"
+name = "%color:red{[VE%0] Validation Error}"
 [validate_error.0001]
 message = "A non-struct value is specified"
 label_0 = "'%color:yellow{%0}' must be a struct"
@@ -96,7 +96,7 @@ label_0 = "The value specified here does not match the defined type"
 label_1 = "Element '%color:yellow{%0}' is defined as array type '%color:yellow{%1}'"
 
 [ml_parse_error]
-name = "%color:red{[GE%0] Grammar error}"
+name = "%color:red{[GE%0] Syntax Error}"
 [ml_parse_error.0001]
 message = "The overall format is invalid"
 label_0 = "Unknown token"
