--- a/src/tyml_diagnostic/message/ja_JP.toml
+++ b/src/tyml_diagnostic/message/ja_JP.toml
@@ -145,6 +145,7 @@ label_1 = "これを削除して見てください"
 
 [lsp.message]
 header_var_lookup_error = "指定された環境変数'%0'を解決できません"
+failed_to_download_tyml = "指定されたTYMLファイルのダウンロードに失敗しました: %0"
 tyml_file_error = "TYMLファイル'%0'を読み込めませんでした"
 style_not_found = "言語定義'%0'が見つかりませんでした"
 array_error_diagnostic = "配列の場合は他の要素のエラーが表示されることがあります"
@@ -154,6 +155,7 @@ no_file_specified = "ファイルが指定されていません"
 failed_to_read_file = "ファイルの読み込みに失敗しました"
 no_header_found = "ヘッダが見つかりませんでした"
 header_var_lookup_error = "ヘッダで指定された環境変数'%0'を解決できません"
+failed_to_download_tyml = "ヘッダで指定されたTYMLファイルのダウンロードに失敗しました: %0"
 header_no_style_found = "ヘッダで指定された言語定義'%0'が見つかりません"
 header_no_tyml_found = "ヘッダで指定されたTYMLファイル'%0'が見つかりません"
 header_tyml_is_not_file = "ヘッダで指定された'%0'はファイルではありません"
