--- a/src/tyml_parser/Cargo.toml
+++ b/src/tyml_parser/Cargo.toml
@@ -5,6 +5,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+tyml_formatter = { path = "../tyml_formatter/" }
 regex = "1.11.1"
 bumpalo = { version = "3.17.0", features = ["allocator-api2"] }
 allocator-api2 = "0.2.21"
