impl generated formatter

--- a/src/tyml_generator/Cargo.toml
+++ b/src/tyml_generator/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2024"
 regex = "1.11.1"
 extension-fn = "1.2.0"
 either = "1.13.0"
+tyml_formatter = { path = "../tyml_formatter/" }
 tyml_type = { path = "../tyml_type/" }
 tyml_validate = { path = "../tyml_validate/" }
 tyml_source = { path = "../tyml_source/" }
