--- a/src/tyml_mock/Cargo.toml
+++ b/src/tyml_mock/Cargo.toml
@@ -5,3 +5,7 @@ edition = "2024"
 
 [dependencies]
 tyml = { path = "../tyml", version = "0.1.0" }
+axum = "0.8.4"
+serde = "1.0.219"
+serde_json = "1.0.142"
+extension-fn = "1.2.0"
