--- a/src/tyml_diagnostic/message/ja_JP.toml
+++ b/src/tyml_diagnostic/message/ja_JP.toml
@@ -211,6 +211,16 @@ message = "余計な区切り文字が記述されています"
 label_0 = "この区切り文字は必要ありません"
 label_1 = "これを削除して見てください"
 
+[mock_error]
+name = "%color:red{[ME%0] エラー}"
+[mock_error.0001]
+message = "既定の戻り値が記述されていません"
+label_0 = "この関数の戻り値が記述されていません"
+note = "'%color:cyan{return}'を用いて関数の戻り値を記述する必要があります"
+[mock_error.0002]
+message = "引数の既定値が指定されていません"
+label_0 = "この引数の既定値が指定されていません"
+
 [lsp.message]
 header_var_lookup_error = "指定された環境変数'%0'を解決できません"
 failed_to_download_tyml = "指定されたTYMLファイルのダウンロードに失敗しました: %0"
