--- a/src/tyml_lsp/Cargo.toml
+++ b/src/tyml_lsp/Cargo.toml
@@ -15,3 +15,4 @@ tokio = { version = "1.44.2", features = ["full"] }
 regex = "1.11.1"
 extension-fn = "1.2.0"
 either = "1.13.0"
+serde_json = "1.0.142"
