--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@
 resolver = "2"
 members = [
     "src/tyml",
+    "src/tyml_api_generator",
     "src/tyml_diagnostic",
     "src/tyml_formatter",
     "src/tyml_generator",
