--- a/src/tyml_validate/Cargo.toml
+++ b/src/tyml_validate/Cargo.toml
@@ -3,11 +3,12 @@
 name = "tyml_validate"
 version = "0.1.0"
 edition = "2024"
+license = "MIT"
 
 [dependencies]
-tyml_parser = { path = "../tyml_parser/" }
-tyml_source = { path = "../tyml_source/" }
-tyml_type = { path = "../tyml_type/" }
+tyml_parser = { path = "../tyml_parser/", version = "0.1.0" }
+tyml_source = { path = "../tyml_source/", version = "0.1.0" }
+tyml_type = { path = "../tyml_type/", version = "0.1.0" }
 hashbrown = "0.15.2"
 bumpalo = { version = "3.17.0", features = ["allocator-api2"] }
 allocator-api2 = "0.2.21"
