--- a/src/tyml_api_generator/Cargo.toml
+++ b/src/tyml_api_generator/Cargo.toml
@@ -2,6 +2,7 @@
 name = "tyml_api_generator"
 version = "0.1.0"
 edition = "2024"
+license = "MIT"
 
 [[bin]]
 name = "tyml-api-gen"
@@ -10,4 +11,4 @@ path = "src/bin/tyml_api_gen.rs"
 [dependencies]
 clap = { version = "4.5.45", features = ["derive"] }
 shellexpand = "3.1.1"
-tyml = { path = "../tyml/", version = "0.1.0" }
+tyml_core = { path = "../tyml/", version = "0.1.0" }
