--- a/src/tyml_lsp/Cargo.toml
+++ b/src/tyml_lsp/Cargo.toml
@@ -3,13 +3,14 @@
 name = "tyml_lsp"
 version = "0.1.0"
 edition = "2024"
+license = "MIT"
 
 [[bin]]
 name = "tyml-lsp-server"
 path = "src/bin/server.rs"
 
 [dependencies]
-tyml = { path = "../tyml/" }
+tyml_core = { path = "../tyml/", version = "0.1.0" }
 tower-lsp = "0.20.0"
 tokio = { version = "1.44.2", features = ["full"] }
 regex = "1.11.1"
