--- a/src/tyml_mock/Cargo.toml
+++ b/src/tyml_mock/Cargo.toml
@@ -2,13 +2,14 @@
 name = "tyml_mock"
 version = "0.1.0"
 edition = "2024"
+license = "MIT"
 
 [[bin]]
 name = "tyml-mock"
 path = "src/bin/tyml_mock.rs"
 
 [dependencies]
-tyml = { path = "../tyml", version = "0.1.0" }
+tyml_core = { path = "../tyml", version = "0.1.0" }
 axum = "0.8.4"
 serde = "1.0.219"
 serde_json = "1.0.142"
