--- a/src/tyml/Cargo.toml
+++ b/src/tyml/Cargo.toml
@@ -4,6 +4,8 @@ name = "tyml_core"
 version = "0.1.0"
 edition = "2021"
 license = "MIT"
+description = "TYML: type checker for markup language"
+repogitory = "https://github.com/tyml-org/tyml/"
 
 [[bin]]
 name = "tyml"
