--- a/src/tyml_diagnostic/Cargo.toml
+++ b/src/tyml_diagnostic/Cargo.toml
@@ -4,6 +4,8 @@ name = "tyml_diagnostic"
 version = "0.1.0"
 edition = "2024"
 license = "MIT"
+description = "TYML: type checker for markup language"
+repogitory = "https://github.com/tyml-org/tyml/"
 
 [dependencies]
 tyml_generator = { path = "../tyml_generator/", version = "0.1.0" }
