--- a/src/tyml_formatter/Cargo.toml
+++ b/src/tyml_formatter/Cargo.toml
@@ -3,5 +3,7 @@ name = "tyml_formatter"
 version = "0.1.0"
 edition = "2024"
 license = "MIT"
+description = "TYML: type checker for markup language"
+repogitory = "https://github.com/tyml-org/tyml/"
 
 [dependencies]
