--- a/src/tyml_lsp/Cargo.toml
+++ b/src/tyml_lsp/Cargo.toml
@@ -4,6 +4,8 @@ name = "tyml_lsp"
 version = "0.1.0"
 edition = "2024"
 license = "MIT"
+description = "TYML: type checker for markup language"
+repogitory = "https://github.com/tyml-org/tyml/"
 
 [[bin]]
 name = "tyml-lsp-server"
