--- a/src/tyml_parser/Cargo.toml
+++ b/src/tyml_parser/Cargo.toml
@@ -4,6 +4,8 @@ name = "tyml_parser"
 version = "0.1.0"
 edition = "2021"
 license = "MIT"
+description = "TYML: type checker for markup language"
+repogitory = "https://github.com/tyml-org/tyml/"
 
 [dependencies]
 tyml_formatter = { path = "../tyml_formatter/", version = "0.1.0" }
