--- a/src/tyml_source/Cargo.toml
+++ b/src/tyml_source/Cargo.toml
@@ -4,6 +4,8 @@ name = "tyml_source"
 version = "0.1.0"
 edition = "2024"
 license = "MIT"
+description = "TYML: type checker for markup language"
+repogitory = "https://github.com/tyml-org/tyml/"
 
 [dependencies]
 extension-fn = "1.2.0"
