--- a/src/tyml_formatter/Cargo.toml
+++ b/src/tyml_formatter/Cargo.toml
@@ -4,6 +4,6 @@ version = "0.1.0"
 edition = "2024"
 license = "MIT"
 description = "TYML: type checker for markup language"
-repogitory = "https://github.com/tyml-org/tyml/"
+repository = "https://github.com/tyml-org/tyml/"
 
 [dependencies]
