--- a/src/tyml_source/Cargo.toml
+++ b/src/tyml_source/Cargo.toml
@@ -5,7 +5,7 @@ version = "0.1.0"
 edition = "2024"
 license = "MIT"
 description = "TYML: type checker for markup language"
-repogitory = "https://github.com/tyml-org/tyml/"
+repository = "https://github.com/tyml-org/tyml/"
 
 [dependencies]
 extension-fn = "1.2.0"
